--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
